<resources>
    <string name="app_name">Final Project BINAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk">Masuk</string>
    <string name="email_nomor_telepon">Email / Nomor Telepon</string>
    <string name="password">Password</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="contoh_example_gmail_com">Contoh : Example@gmail.com</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="buat_password">Buat Password</string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="daftar_di_sini">Daftar di sini</string>
    <string name="sudah_punya_akun">Sudah punya akun? </string>
    <string name="masuk_di_sini">Masuk di sini</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="masukkan_otp">Masukkan OTP</string>
    <string name="ke">ke </string>
    <string name="kirim_ulang_otp_dalam_60_detik">Kirim Ulang OTP dalam 60 detik</string>
    <string name="minta_kode_baru_via_email">Minta kode baru via Email</string>
    <string name="from">From</string>
    <string name="jakarta_jkta">Jakarta (JKTA)</string>
    <string name="to">To</string>
    <string name="melbourne_mlb">Melbourne (MLB)</string>
    <string name="pulang_pergi">Pulang-Pergi?</string>
    <string name="departure">Departure</string>
    <string name="_1_mei_2023">1 Mei 2023</string>
    <string name="return_text">Return</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="passengers">Passengers</string>
    <string name="_2_penumpang">2 Penumpang</string>
    <string name="business">Business</string>
    <string name="seat_class">Seat Class</string>
    <string name="cari_penerbangan">Cari Penerbangan</string>
    <string name="backbutton">BackButton</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="kirim_email">Kirim Email</string>
    <string name="destinasi_favorit">Destinasi Favorit</string>
    <string name="hei_mau_kemana">Hei, Mau kemana?</string>
    <string name="todo">TODO</string>
    <string name="ketik_6_digit_kode_yang_dikirimkan">Ketik 6 digit kode yang dikirimkan</string>
    <string name="_62824244534">+62824244534</string>
    <string name="_62">+62</string>
    <string name="reset_password">Reset Password</string>
    <string name="masukan_password_baru">Masukan Password Baru</string>
    <string name="ulangi_password_baru">Ulangi Password Baru</string>
    <string name="simpan">Simpan</string>
    <string name="masukan_kota_atau_negara">Masukan Kota atau negara</string>
    <string name="pencarian_terkini">Pencarian Terkini</string>
    <string name="hapus">Hapus</string>
    <string name="tanggal_berangkat">Tanggal Berangkat</string>
    <string name="sabtu_6_maret_2023">Sabtu, 6 Maret 2023</string>
    <string name="tanggal_pulang">Tanggal Pulang</string>
    <string name="sabtu_7_maret_2023">Sabtu, 7 Maret 2023</string>
    <string name="pilih">Pilih</string>
    <string name="dewasa">Dewasa</string>
    <string name="_12_tahun_keatas">(12 tahun keatas)</string>
    <string name="min">-</string>
    <string name="_2">2</string>
    <string name="tambah">+</string>
    <string name="anak">Anak</string>
    <string name="_2_11_tahun">(2-11 tahun)</string>
    <string name="bayi">Bayi</string>
    <string name="dibawah_2_tahun">(Dibawah 2 tahun)</string>
    <string name="biodata_pemesan">Biodata Pemesan</string>
    <string name="mulai_dari">Mulai Dari</string>
    <string name="selamat">Selamat</string>
    <string name="transaksi_pembayaran_tiket_sukses">Transaksi Pembayaran Tiket Sukses!</string>
    <string name="bayar">Bayar</string>
    <string name="pilih_seat_class">Pilih Seat Class</string>
    <string name="set_penumpang">Set Penumpang</string>
    <string name="beranda">Beranda</string>
    <string name="pilih_tujuan">Pilih Tujuan</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send">Send</string>
    <string name="kirim">Kirim</string>
</resources>