<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/btnCloseTanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/linearTanggalPP"
        android:padding="15dp"
        android:layout_below="@id/btnCloseTanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/tanggal_berangkat"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tanggalBerangkat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sabtu_6_maret_2023"
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="75dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/tanggal_pulang"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tanggalPulang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sabtu_7_maret_2023"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>

        

    </LinearLayout>

    <CalendarView
        android:id="@+id/calender"
        android:layout_below="@id/linearTanggalPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnPilihTanggal"
        android:fontFamily="@font/poppins_medium"
        android:background="@drawable/btn_bg"
        android:text="@string/pilih"
        android:layout_marginVertical="20dp"
        android:layout_below="@id/calender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>