<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp"
    tools:context=".ui.forgotpassword.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/btnBack"
        android:src="@drawable/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/backbutton" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLupaPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginHorizontal="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_bold" />

    <TextView
        android:id="@id/tvEmail"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:layout_below="@id/tvLupaPassword"
        android:textSize="12sp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/email_nomor_telepon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEmail"
        android:layout_marginTop="5dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopStart="16dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/masukan_email"
        android:fontFamily="@font/poppins_regular">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnKirim"
        style="@style/Btn"
        app:cornerRadius="14dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/Email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/kirim"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"/>
</RelativeLayout>