<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    tools:context=".ui.auth.forgetpassword.ForgetPasswordFragment">

    <ImageView
        android:src="@drawable/ic_back"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/backbutton" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLupaPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:text="@string/lupa_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLupaPassword"
        android:layout_marginTop="5dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopStart="16dp"
        android:hint="@string/masukan_email"
        android:fontFamily="@font/poppins_regular">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/kirimEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Email"
        android:layout_marginTop="10dp"
        android:text="@string/kirim_email"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"/>




</RelativeLayout>