<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:http="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.register.RegisterFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/back"
        android:src="@drawable/ic_back"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/todo"
        http:layout_constraintStart_toStartOf="parent"
        http:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp">
    <TextView
        android:id="@+id/tvDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:text="@string/daftar"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:fontFamily="@font/poppins_bold" />

    <TextView
        android:id="@id/tvNama"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:layout_below="@id/tvDaftar"
        android:text="@string/nama"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNama"
        android:layout_alignParentEnd="true"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:endIconMode="custom"
        app:errorIconDrawable="@null"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/masukanNama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nama_lengkap"
            tools:ignore="SpeakableTextPresentCheck"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@id/tvEmailOrTelp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:layout_below="@id/nama"
        android:text="@string/email"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        android:layout_below="@+id/tvEmailOrTelp"
        android:layout_alignParentEnd="true"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:errorIconDrawable="@null"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/masukanEmail"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/contoh_example_gmail_com"
            tools:ignore="SpeakableTextPresentCheck"
            android:inputType="textEmailAddress"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@id/tvTelepon"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_below="@id/Email"
        android:text="@string/nomor_telepon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="custom"
            android:layout_below="@+id/tvTelepon"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:errorIconDrawable="@null"
            app:prefixText="+62"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/masukanTelepon"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_62"
                android:inputType="phone"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
        android:id="@id/tvPassword"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_below="@id/telepon"
        android:text="@string/buat_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:layout_below="@+id/tvPassword"
        android:layout_alignParentEnd="true"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:errorIconDrawable="@null"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/masukanPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:hint="@string/buat_password"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnDaftar"
        android:background="@drawable/btn_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/DARKBLUE04"
        android:text="@string/daftar"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tvBelumPunyaAkun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/poppins_regular"/>

            <TextView
                android:id="@+id/tvDaftarDisini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk_di_sini"
                android:textColor="@color/DARKBLUE05"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"/>
        </LinearLayout>
</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
