<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PENCARIAN"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMasukanPencarian"
            android:inputType="text"
            android:layout_width="330dp"
            android:text="@string/masukan_kota_atau_negara"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/btnClosePencarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_close" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPencarianTerkini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/pencarian_terkini"
        android:layout_below="@id/PENCARIAN"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="20sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHapus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/hapus"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/Red"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/PENCARIAN"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPencarianTerkini"
        android:layout_below="@+id/tvPencarianTerkini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>