<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.resetpassword.ResetPasswordFragment">

    <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:src="@drawable/ic_back"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo" />


    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMasuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@id/tvEmailOrTelp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/tvMasuk"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/masukan_password_baru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEmailOrTelp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="45dp"
        android:hint="@string/masukan_password_baru"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@id/tvPassword"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_below="@id/Email"
        android:layout_marginStart="25dp"
        android:text="@string/ulangi_password_baru"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="45dp"
        android:hint="@string/masukan_password_baru"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/masukanPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_marginStart="50dp"
        style="@style/Btn"
        app:cornerRadius="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/simpan"
        android:textColor="@color/white" />

</RelativeLayout>